--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
 		"bin-check": "^4.1.0",
 		"bin-version-check": "^4.0.0",
 		"download": "^7.1.0",
-		"download-status": "^2.2.1",
-		"pify": "^4.0.1"
+		"pify": "^4.0.1",
+		"progress": "^2.0.3"
 	},
 	"devDependencies": {
 		"ava": "*",
