--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
-	"name": "bin-wrapper",
-	"version": "4.1.0",
+	"name": "binary-wrapper",
+	"version": "0.0.1",
 	"description": "Binary wrapper that makes your programs seamlessly available as local dependencies",
 	"license": "MIT",
-	"repository": "kevva/bin-wrapper",
-	"author": {
-		"name": "Kevin Mårtensson",
-		"email": "kevinmartensson@gmail.com",
-		"url": "https://github.com/kevva"
-	},
 	"engines": {
 		"node": ">=6"
 	},
